@@ -1,7 +1,9 @@
-package org.apache.solr.mcp.server;
+package org.apache.solr.mcp.server.indexing;
 
 import org.apache.solr.common.SolrInputDocument;
+import org.apache.solr.mcp.server.indexing.documentcreator.IndexingDocumentCreator;
 import org.junit.jupiter.api.Test;
+import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.boot.test.context.SpringBootTest;
 import org.springframework.test.context.TestPropertySource;
 
@@ -19,10 +21,12 @@ import static org.assertj.core.api.Assertions.assertThat;
 @TestPropertySource(locations = "classpath:application.properties")
 class CsvIndexingTest {
 
+    @Autowired
+    private IndexingDocumentCreator indexingDocumentCreator;
+
     @Test
     void testCreateSchemalessDocumentsFromCsv() throws Exception {
         // Given
-        IndexingService indexingService = new IndexingService(null, null);
         
         String csvData = """
             id,cat,name,price,inStock,author,series_t,sequence_i,genre_s
@@ -32,13 +36,13 @@ class CsvIndexingTest {
             """;
         
         // When
-        List<SolrInputDocument> documents = indexingService.createSchemalessDocumentsFromCsv(csvData);
+        List<SolrInputDocument> documents = indexingDocumentCreator.createSchemalessDocumentsFromCsv(csvData);
         
         // Then
         assertThat(documents).hasSize(3);
         
         // Verify first document
-        SolrInputDocument firstDoc = documents.get(0);
+        SolrInputDocument firstDoc = documents.getFirst();
         assertThat(firstDoc.getFieldValue("id")).isEqualTo("0553573403");
         assertThat(firstDoc.getFieldValue("cat")).isEqualTo("book");
         assertThat(firstDoc.getFieldValue("name")).isEqualTo("A Game of Thrones");
@@ -66,7 +70,6 @@ class CsvIndexingTest {
     @Test
     void testCreateSchemalessDocumentsFromCsvWithEmptyValues() throws Exception {
         // Given
-        IndexingService indexingService = new IndexingService(null, null);
         
         String csvData = """
             id,name,description
@@ -76,13 +79,13 @@ class CsvIndexingTest {
             """;
         
         // When
-        List<SolrInputDocument> documents = indexingService.createSchemalessDocumentsFromCsv(csvData);
+        List<SolrInputDocument> documents = indexingDocumentCreator.createSchemalessDocumentsFromCsv(csvData);
         
         // Then
         assertThat(documents).hasSize(3);
         
         // First document should have all fields
-        SolrInputDocument firstDoc = documents.get(0);
+        SolrInputDocument firstDoc = documents.getFirst();
         assertThat(firstDoc.getFieldValue("id")).isEqualTo("1");
         assertThat(firstDoc.getFieldValue("name")).isEqualTo("Test Product");
         assertThat(firstDoc.getFieldValue("description")).isEqualTo("Some description");
@@ -103,7 +106,6 @@ class CsvIndexingTest {
     @Test
     void testCreateSchemalessDocumentsFromCsvWithQuotedValues() throws Exception {
         // Given
-        IndexingService indexingService = new IndexingService(null, null);
         
         String csvData = """
             id,name,description
@@ -112,13 +114,13 @@ class CsvIndexingTest {
             """;
         
         // When
-        List<SolrInputDocument> documents = indexingService.createSchemalessDocumentsFromCsv(csvData);
+        List<SolrInputDocument> documents = indexingDocumentCreator.createSchemalessDocumentsFromCsv(csvData);
         
         // Then
         assertThat(documents).hasSize(2);
         
         // First document should have quotes removed
-        SolrInputDocument firstDoc = documents.get(0);
+        SolrInputDocument firstDoc = documents.getFirst();
         assertThat(firstDoc.getFieldValue("id")).isEqualTo("1");
         assertThat(firstDoc.getFieldValue("name")).isEqualTo("Quoted Name");
         assertThat(firstDoc.getFieldValue("description")).isEqualTo("Quoted description");
